Remove script size validation when creating a standard multisig federation